# suMCP

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPEC.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  signal_felt_wrong.md
.github/workflows/: audit.yml
crates/sumcp-cli/: Cargo.toml
crates/sumcp-cli/src/: install.rs  main.rs
crates/sumcp-cli/tests/: html_report.rs  install.rs
crates/sumcp-core/: Cargo.toml
crates/sumcp-core/examples/: validity_dump.rs
crates/sumcp-core/src/: assemble.rs  html.rs  ingest.rs  lib.rs  locate.rs  merge.rs  model.rs  payloads.rs  redact.rs  report.rs  review.rs  score.rs  signals.rs
crates/sumcp-core/src/signals/: comprehension.rs  dynamics.rs  edit_shape.rs  failures.rs
crates/sumcp-core/tests/: fixture.rs
crates/sumcp-mcp/: Cargo.toml
crates/sumcp-mcp/src/: identify.rs  main.rs  server.rs  store.rs
crates/sumcp-mcp/tests/: stdio.rs
docs/: metrics-spec.md  metrics.md  payload-schema.md  research-provenance-audit.md
docs/assets/: diagram-pipeline.mmd
docs/ideas/: 2026-07-21-cross-session-memory-graph.md  sumcp.md
docs/learnings/: 2026-07-17-content-substrings-cannot-identify-the-calling-session.md  2026-07-20-transcript-writes-are-deferred-tail-scan-is-opportunistic.md
docs/plans/: 2026-07-18-research-regrounding.md
docs/superpowers/plans/: 2026-07-21-p1-html-report.md  2026-07-21-subagent-flat-merge.md  2026-07-21-t5.4-readme-showpiece-and-oss-docs.md  2026-07-22-html-report-redesign.md
docs/superpowers/specs/: 2026-07-20-subagent-flat-merge-design.md  2026-07-21-evidence-campaign-and-authored-docs-design.md  2026-07-21-t5.4-readme-showpiece-and-oss-docs-design.md  2026-07-22-html-report-redesign-design.md
docs/validation/: 2026-07-22-predictive-validity.md
fixtures/: README.md  edge-cases.jsonl
fixtures/demo/: demo-session.jsonl
fixtures/mock-payloads/: blind_spots.json  context_health.json  error_ambiguous_session.json  evidence.json  file_story.json  sample-debrief.md  session_overview.json  struggle_areas.json
fixtures/raw/: README.md
fixtures/subagent-merge/: 5717aaaa-1111-2222-3333-444455556666.jsonl
fixtures/subagent-merge/5717aaaa-1111-2222-3333-444455556666/subagents/: agent-helper.jsonl
scripts/: check_debrief.py  check_payloads.py  check_sanitizer.py  convergent_validity.py  render_demo_report.sh  sanitize.py  validate_sweep.py  validity_sweep.py
skills/debrief/: SKILL.md
tasks/: plan.md  todo.md
