[workspace]
resolver = "3"
members = ["crates/sumcp-core", "crates/sumcp-cli", "crates/sumcp-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rbh227/suMCP"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
