[package]
name = "sumcp-mcp"
description = "suMCP MCP server over stdio: six read-only session-forensics tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sumcp-mcp"
path = "src/main.rs"

# rmcp (and tokio with it) is added and pinned in T4.1 when the server is
# wired — pinning a pre-1.0 SDK weeks before use only invites churn (ADR A2).
[dependencies]
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
sumcp-core = { path = "../sumcp-core" }
tokio = { version = "1.52.4", features = ["macros", "rt", "time"] }
toml = "1.1.3"

[dev-dependencies]
sumcp-core = { path = "../sumcp-core" }
tempfile = "3.27.0"
